# VisionPack

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  NOTICE  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  Gemfile  SPEC-cloud-sync.md  SPEC.md  _config.yml  cloud-sync.md  index.md  installation.md  internals.md  json-output.md  quickstart.md  sdk.md  usage.md  web-ui.md
proto/: sample_envelope.proto
scripts/: benchmark.py  prepare-release.ps1  prepare_release.py
tests/: __init__.py  test_audit.py  test_cloud_hardening.py  test_cloud_resolver.py  test_cloud_target.py  test_coco_flow.py  test_compatibility.py  test_drift_lineage.py  test_duplicates.py  test_eval.py  test_export_materialize.py  test_fsck.py  test_import_record.py  test_index.py  test_json_contract.py  test_lock.py  test_manifest.py  test_media.py  test_model_loop.py  test_multisource.py  test_pack_training.py  test_project.py  test_remote_asset_checks.py  test_resilience.py  test_robustness.py  test_sdk.py  test_segmentation_formats.py  test_server.py  test_snapshot_dedup.py  test_snapshot_restore.py  test_sources.py  test_split.py  test_tasks.py  test_yolo_flow.py
visionpack/: __init__.py  __main__.py  audit.py  autolabel.py  curation.py  diff.py  drift.py  duplicates.py  eval.py  fsck.py  media.py  perceptual.py  predictions.py  progress.py  snapshot.py  split.py  stats.py
visionpack/cli/: main.py  output.py
visionpack/cli/commands/: __init__.py  annotate.py  audit.py  autolabel.py  diff.py  eval.py  export.py  fsck.py  import_.py  init.py  pack.py  queue.py  serve.py  snapshot.py  split.py  stats.py  sync.py  validate.py
visionpack/core/: __init__.py  errors.py  lock.py  manifest.py  models.py  project.py
visionpack/formats/: __init__.py  base.py  classification.py  coco.py  detect.py  masks.py  materialize.py  yolo.py
visionpack/index/: __init__.py  json_index.py  sqlite_index.py
visionpack/packing/: __init__.py  archive.py  webdataset.py
visionpack/sdk/: __init__.py
visionpack/server/: __init__.py  app.py  jobs.py
visionpack/server/static/: index.html
visionpack/sources/: __init__.py  importer.py  join.py  resolver.py  retry.py  schema.py  target.py
visionpack/storage/: __init__.py  hash.py  object_store.py
visionpack/validation/: __init__.py  engine.py
