[project]
name = "visionpack"
version = "0.0.1"
description = "DatasetOps for computer vision datasets"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Caio Wingeter", email = "caio@airis-tech.com" }]
keywords = [
    "computer-vision",
    "dataset",
    "datasetops",
    "yolo",
    "coco",
    "mlops",
    "machine-learning",
    "annotations",
    "reproducibility",
    "deduplication",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "orjson>=3.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
# Cloud source/sink backends. Each pulls fsspec plus the provider filesystem;
# the core never imports these — `get_resolver` only reaches for them when a
# remote URI scheme is used. See docs/SPEC-cloud-sync.md.
s3 = ["fsspec>=2024.6.0", "s3fs>=2024.6.0"]
gcs = ["fsspec>=2024.6.0", "gcsfs>=2024.6.0"]
azure = ["fsspec>=2024.6.0", "adlfs>=2024.6.0"]
# `vp serve`: the local web UI + REST API. Optional like the cloud backends —
# the core never imports it; the serve command reaches for it lazily.
server = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.urls]
Homepage = "https://github.com/CaioWing/VisionPack"
Repository = "https://github.com/CaioWing/VisionPack"
Issues = "https://github.com/CaioWing/VisionPack/issues"

[project.scripts]
vp = "visionpack.cli.main:main"
visionpack = "visionpack.cli.main:main"

[dependency-groups]
# fsspec (core only — no provider libs needed) gives the in-memory filesystem the
# FsspecResolver tests run against, so cloud-path coverage needs no network.
# fastapi + httpx let the API tests drive `vp serve`'s app in-process.
dev = ["ruff>=0.6", "fsspec>=2024.6.0", "fastapi>=0.115", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["visionpack*"]

[tool.setuptools.package-data]
visionpack = ["py.typed", "server/static/*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
